--- a/src/index.html
+++ b/src/index.html
@@ -20,11 +20,7 @@
       </header>
       <main class="content">
         <section class="profile page__section">
-          <img
-            src="<%= require('./images/avatar.jpg') %>"
-            alt="Аватар пользователя"
-            class="profile__image"
-          />
+          <div class="profile__image"></div>
           <div class="profile__info">
             <h1 class="profile__title">Жак-Ив Кусто</h1>
             <button class="profile__edit-button" type="button"></button>
@@ -50,14 +46,27 @@
               class="popup__input popup__input_type_name"
               placeholder="Имя"
               required
+              id="name-input"
+              pattern="^[a-zA-Zа-яА-ЯёЁ\s\-]+$"
+              data-error-message="Только латинские, кириллические буквы, знаки дефиса и пробелы"
+              minlength="2"
+              maxlength="40"
             />
+            <span class="name-input-error popup__input_type_error"></span>
             <input
               type="text"
               name="description"
               class="popup__input popup__input_type_description"
               placeholder="Занятие"
+              data-error-message=""
               required
+              id="description-input"
+              minlength="2"
+              maxlength="200"
             />
+            <span
+              class="description-input-error popup__input_type_error"
+            ></span>
             <button type="submit" class="button popup__button">
               Сохранить
             </button>
@@ -75,14 +84,23 @@
               class="popup__input popup__input_type_card-name"
               placeholder="Название"
               required
+              id="place-name-input"
+              pattern="^[a-zA-Zа-яА-ЯёЁ\s\-]+$"
+              data-error-message="Только латинские, кириллические буквы, знаки дефиса и пробелы"
+              minlength="2"
+              maxlength="30"
             />
+            <span class="place-name-input-error popup__input_type_error"></span>
             <input
               type="url"
               name="link"
               class="popup__input popup__input_type_url"
               placeholder="Ссылка на картинку"
+              data-error-message=""
               required
+              id="place-url-input"
             />
+            <span class="place-url-input-error popup__input_type_error"></span>
             <button type="submit" class="button popup__button">
               Сохранить
             </button>
@@ -98,13 +116,36 @@
       </div>
     </div>
 
+    <div class="popup popup_type-avatar popup_is-animated">
+      <div class="popup__content">
+        <button class="popup__close" type="button"></button>
+        <h3 class="popup__title">Обновить аватар</h3>
+        <form class="popup__form" name="avatar-form">
+          <input
+            type="url"
+            name="avatar"
+            id="url-input"
+            data-error-message=""
+            class="popup__input popup__input_type_url"
+            placeholder="Ссылка на картинку"
+            required
+          />
+          <span class="url-input-error popup__input_type_error"></span>
+          <button type="submit" class="button popup__button">Сохранить</button>
+        </form>
+      </div>
+    </div>
+
     <template id="card-template">
       <li class="places__item card">
         <img class="card__image" src="" alt="" />
         <button type="button" class="card__delete-button"></button>
         <div class="card__description">
           <h2 class="card__title"></h2>
-          <button type="button" class="card__like-button"></button>
+          <div class="like-element">
+            <button type="button" class="card__like-button"></button>
+            <span class="like-button__count">0</span>
+          </div>
         </div>
       </li>
     </template>
